Fixed search on mobile

--- a/css/content.css
+++ b/css/content.css
@@ -134,10 +134,6 @@ h2
         width: 95%;
         grid-gap: 10px;
     }
-    #search
-    {
-        display: none;
-    }
 }
 @media(max-width: 850px)
 {
